fixed bug where city not found is not showing

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap");
+
 * {
   box-sizing: border-box;
 }
@@ -7,6 +9,8 @@ body {
   padding: 0;
   margin: 0;
   background: url("./assets/images/sunny.jpg");
+  font-family: "Poppins", sans-serif;
+  font-weight: bold;
 }
 
 .container {
